<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="#ffffff"
    android:columnCount="4"
    android:orientation="vertical"
    android:rowCount="5">

    <Button
        android:id="@+id/btn_clear"
        style="@style/FunctionalButtons"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/c" />

    <Button
        android:id="@+id/btn_percentage"
        style="@style/FunctionalButtons"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/percentage" />


    <Button
        android:id="@+id/btn_divide"
        style="@style/FunctionalButtons"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/divide" />

    <Button
        android:id="@+id/btn_multiply"
        style="@style/FunctionalButtons"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:text="@string/x" />


    <!-- second line -->
    <Button
        android:id="@+id/btn_seven"
        style="@style/NumberButtons"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/seven" />

    <Button
        android:id="@+id/btn_eight"
        style="@style/NumberButtons"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/eight" />

    <Button
        android:id="@+id/btn_nine"
        style="@style/NumberButtons"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/nine" />

    <Button
        android:id="@+id/btn_minus"
        style="@style/FunctionalButtons"
        android:layout_row="1"

        android:layout_column="3"
        android:layout_columnWeight="1"
        android:text="@string/minus" />

    <!-- third line -->
    <Button
        android:id="@+id/btn_four"
        style="@style/NumberButtons"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:text="@string/four" />

    <Button
        android:id="@+id/btn_five"
        style="@style/NumberButtons"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/five" />

    <Button
        android:id="@+id/btn_six"
        style="@style/NumberButtons"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/six" />

    <Button
        android:id="@+id/btn_plus"
        style="@style/FunctionalButtons"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:text="@string/plus" />

    <!-- forth line -->
    <Button
        android:id="@+id/btn_one"
        style="@style/NumberButtons"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/one" />

    <Button
        android:id="@+id/btn_two"
        android:layout_columnWeight="1"
        style="@style/NumberButtons"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/two" />

    <Button
        android:id="@+id/btn_three"
        android:layout_columnWeight="1"
        style="@style/NumberButtons"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/three" />

    <Button
        android:id="@+id/btn_equal"
        style="@style/EqualButtons"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_rowSpan="2"
        android:layout_column="3"
        android:layout_gravity="fill_vertical"
        android:text="@string/equal" />

    <!-- fifth line -->
    <Button
        android:id="@+id/btn_dot"
        android:layout_columnWeight="1"
        style="@style/NumberButtons"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/dot" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_columnWeight="1"
        style="@style/NumberButtons"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/zero" />

    <Button
        android:id="@+id/btn_doubleZero"
        android:layout_columnWeight="1"
        style="@style/NumberButtons"
        android:layout_row="4"
        android:layout_column="2"
        android:text="@string/doubleZero" />


</GridLayout>